# parallels

./: .gitignore
Task1_Sin/: CMakeLists.txt  README.md  main.cpp
Task2_MatrixMult/Task2-1/: CMakeLists.txt  measure.sh  report.md
Task2_MatrixMult/Task2-1/include/: appSettings.h  matrix.h
Task2_MatrixMult/Task2-1/src/: main.cpp  matrix.cpp
Task2_MatrixMult/Task2-2/: CMakeLists.txt  main.cpp  measure.sh  report.md
Task2_MatrixMult/Task2-3/: CMakeLists.txt  measure.sh  report.md
Task2_MatrixMult/Task2-3/include/: matrix.h
Task2_MatrixMult/Task2-3/src/: main.cpp  matrix.cpp
Task3_ClientServer/: CMakeLists.txt
Task3_ClientServer/include/: Server.h
Task3_ClientServer/src/: main.cpp
Task4_Camera/: ProgramArguments.py  Sensor.py  SensorCam.py  SensorX.py  WindowImage.py  main.py
Task5_Yolo/: application.py  check_threads.sh  main.py  report.md
Task6_Plate/: CMakeLists.txt  report.md  stats_human.txt  test.sh
Task6_Plate/include/: Application.h  CmdArguments.h  Grid.h  SquareMatrix.h
Task6_Plate/src/: Application.cpp  Grid.cpp  SquareMatrix.cpp  main.cpp
